Foto's op verkooppagina naar origineel formaat gewijzigd

--- a/links.html
+++ b/links.html
@@ -83,7 +83,8 @@
 		<a link href="https://www.natuurpunt.be/"style="color: darkgreen;">Natuurpunt</a><br><br>
 		<a link href="https://www.vsh.be/"style="color: darkgreen;">vzw Vlaamse Schapenhouderij</a><br><br>
 		<a link href="https://www.natuurenbos.be/"style="color: darkgreen;">Agentschap Natuur & Bos</a><br><br>
-		<a link href="https://www.suikerpark.be/suikerpark/ontspannen/"style="color: darkgreen;">Natuurdomein Suikerpark</a><br><br>
+		<a link href="https://www.natuurpunt.be/natuurgebieden/schuddebeurze"style="color: darkgreen;">Schuddebeurze</a><br><br>
+		<a link href="https://suikerpark.be/"style="color: darkgreen;">Natuurdomein Suikerpark</a><br><br>
 		<a link href="https://www.oudenburg.be/natuurdomein-de-hoge-dijken.aspx"style="color: darkgreen;">Natuurdomein de Hoge Dijken</a><br><br>
 		<a link href="https://www.centrumgroei.be/"style="color: darkgreen;">vzw Centrum Groei</a><br><br>
 		</div>
