--- a/verkoop.html
+++ b/verkoop.html
@@ -122,12 +122,12 @@
         </div><br><br><br>
         <div class="images"
             style="display: flex; flex-wrap: wrap; gap: 25px; align-items: center; justify-content: center;">
-            <img src="img/vlees.jpg" alt="" height="250px" width="400px">
-            <img src="img/vlees2.jpg" alt="" height="250px" width="400px">
-            <img src="img/vlees3.jpg" alt="" height="250px" width="400px">
-            <img src="img/vlees4.jpg" alt="" height="250px" width="400px">
-            <img src="img/vlees5.jpg" alt="" height="250px" width="400px">
-            <img src="img/vlees6.jpg" alt="" height="250px" width="400px">
+            <img src="img/vlees.jpg" alt="">
+            <img src="img/vlees2.jpg" alt="">
+            <img src="img/vlees3.jpg" alt="">
+            <img src="img/vlees4.jpg" alt="">
+            <img src="img/vlees5.jpg" alt="">
+            <img src="img/vlees6.jpg" alt="">
         </div>
     </section>
     <!-- End Sample Area -->
