--- a/contact.html
+++ b/contact.html
@@ -101,6 +101,12 @@
               <h3>Johan.Barra@live.be</h3>
             </div>
           </div>
+          <div class="media contact-info">
+            <span class="contact-info__icon"><i class="ti-email"></i></span>
+            <div class="media-body">
+              <h3>veerle.coussement@live.be</h3>
+            </div>
+          </div>
                 </div></td>
             </tr>
         </table>
